Update CSUF Utils